pat2prism/gen/PATParser.py
# Generated from grammar/PAT.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PATParser ( Parser ):

    grammarFileName = "PAT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Skip'", "'SKIP'", "'true'", "'false'", 
                     "'->'", "<INVALID>", "'[]'", "'!'", "'?'", "'=='", 
                     "'!='", "'<'", "'>'", "'<='", "'>='", "'&&'", "'or'", 
                     "'not'", "'+'", "'-'", "'*'", "'/'", "'%'", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "';'", "','", "'.'", 
                     "':'", "'='", "'channel'", "'var'", "'enum'", "'assert'", 
                     "'call'", "'random'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ARROW", "PAR_OP", "CHOICE_OP", "SEND", 
                      "RECV", "EQ", "NE", "LT", "GT", "LE", "GE", "AND", 
                      "OR", "NOT", "PLUS", "MINUS", "MULT", "DIV", "MOD", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
                      "RBRACK", "SEMICOLON", "COMMA", "DOT", "COLON", "ASSIGN", 
                      "CHANNEL", "VAR", "ENUM", "ASSERT", "CALL", "RANDOM", 
                      "NUMBER", "IDENT", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "WS" ]

    RULE_spec = 0
    RULE_declaration = 1
    RULE_channelDecl = 2
    RULE_typeDecl = 3
    RULE_processDecl = 4
    RULE_paramList = 5
    RULE_processBody = 6
    RULE_parallelComposition = 7
    RULE_sequentialComposition = 8
    RULE_primaryProcess = 9
    RULE_skipProcess = 10
    RULE_action = 11
    RULE_communicationAction = 12
    RULE_channelName = 13
    RULE_message = 14
    RULE_fieldList = 15
    RULE_assignmentAction = 16
    RULE_internalAction = 17
    RULE_guardedProcess = 18
    RULE_processCall = 19
    RULE_argList = 20
    RULE_choiceProcess = 21
    RULE_primaryBase = 22
    RULE_blockProcess = 23
    RULE_assertDecl = 24
    RULE_expr = 25
    RULE_orExpr = 26
    RULE_andExpr = 27
    RULE_comparisonExpr = 28
    RULE_additiveExpr = 29
    RULE_multiplicativeExpr = 30
    RULE_unaryExpr = 31
    RULE_primaryExpr = 32

    ruleNames =  [ "spec", "declaration", "channelDecl", "typeDecl", "processDecl", 
                   "paramList", "processBody", "parallelComposition", "sequentialComposition", 
                   "primaryProcess", "skipProcess", "action", "communicationAction", 
                   "channelName", "message", "fieldList", "assignmentAction", 
                   "internalAction", "guardedProcess", "processCall", "argList", 
                   "choiceProcess", "primaryBase", "blockProcess", "assertDecl", 
                   "expr", "orExpr", "andExpr", "comparisonExpr", "additiveExpr", 
                   "multiplicativeExpr", "unaryExpr", "primaryExpr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    ARROW=5
    PAR_OP=6
    CHOICE_OP=7
    SEND=8
    RECV=9
    EQ=10
    NE=11
    LT=12
    GT=13
    LE=14
    GE=15
    AND=16
    OR=17
    NOT=18
    PLUS=19
    MINUS=20
    MULT=21
    DIV=22
    MOD=23
    LPAREN=24
    RPAREN=25
    LBRACE=26
    RBRACE=27
    LBRACK=28
    RBRACK=29
    SEMICOLON=30
    COMMA=31
    DOT=32
    COLON=33
    ASSIGN=34
    CHANNEL=35
    VAR=36
    ENUM=37
    ASSERT=38
    CALL=39
    RANDOM=40
    NUMBER=41
    IDENT=42
    LINE_COMMENT=43
    BLOCK_COMMENT=44
    WS=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PATParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PATParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(PATParser.DeclarationContext,i)


        def getRuleIndex(self):
            return PATParser.RULE_spec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpec" ):
                listener.enterSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpec" ):
                listener.exitSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpec" ):
                return visitor.visitSpec(self)
            else:
                return visitor.visitChildren(self)




    def spec(self):

        localctx = PATParser.SpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_spec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4913442586624) != 0):
                self.state = 66
                self.declaration()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 72
            self.match(PATParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def channelDecl(self):
            return self.getTypedRuleContext(PATParser.ChannelDeclContext,0)


        def processDecl(self):
            return self.getTypedRuleContext(PATParser.ProcessDeclContext,0)


        def typeDecl(self):
            return self.getTypedRuleContext(PATParser.TypeDeclContext,0)


        def assertDecl(self):
            return self.getTypedRuleContext(PATParser.AssertDeclContext,0)


        def getRuleIndex(self):
            return PATParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = PATParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [35]:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.channelDecl()
                pass
            elif token in [42]:
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.processDecl()
                pass
            elif token in [36, 37]:
                self.enterOuterAlt(localctx, 3)
                self.state = 76
                self.typeDecl()
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 4)
                self.state = 77
                self.assertDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChannelDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHANNEL(self):
            return self.getToken(PATParser.CHANNEL, 0)

        def IDENT(self):
            return self.getToken(PATParser.IDENT, 0)

        def SEMICOLON(self):
            return self.getToken(PATParser.SEMICOLON, 0)

        def NUMBER(self):
            return self.getToken(PATParser.NUMBER, 0)

        def getRuleIndex(self):
            return PATParser.RULE_channelDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChannelDecl" ):
                listener.enterChannelDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChannelDecl" ):
                listener.exitChannelDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChannelDecl" ):
                return visitor.visitChannelDecl(self)
            else:
                return visitor.visitChildren(self)




    def channelDecl(self):

        localctx = PATParser.ChannelDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_channelDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(PATParser.CHANNEL)
            self.state = 81
            self.match(PATParser.IDENT)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==41:
                self.state = 82
                self.match(PATParser.NUMBER)


            self.state = 85
            self.match(PATParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(PATParser.IDENT, 0)

        def VAR(self):
            return self.getToken(PATParser.VAR, 0)

        def ENUM(self):
            return self.getToken(PATParser.ENUM, 0)

        def ASSIGN(self):
            return self.getToken(PATParser.ASSIGN, 0)

        def LBRACE(self):
            return self.getToken(PATParser.LBRACE, 0)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(PATParser.SEMICOLON)
            else:
                return self.getToken(PATParser.SEMICOLON, i)

        def RBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(PATParser.RBRACE)
            else:
                return self.getToken(PATParser.RBRACE, i)

        def getRuleIndex(self):
            return PATParser.RULE_typeDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeDecl" ):
                listener.enterTypeDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeDecl" ):
                listener.exitTypeDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeDecl" ):
                return visitor.visitTypeDecl(self)
            else:
                return visitor.visitChildren(self)




    def typeDecl(self):

        localctx = PATParser.TypeDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_typeDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            _la = self._input.LA(1)
            if not(_la==36 or _la==37):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 88
            self.match(PATParser.IDENT)
            self.state = 89
            _la = self._input.LA(1)
            if not(_la==26 or _la==34):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 70367536218110) != 0):
                self.state = 90
                _la = self._input.LA(1)
                if _la <= 0 or _la==27 or _la==30:
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 96
            _la = self._input.LA(1)
            if not(_la==27 or _la==30):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcessDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(PATParser.IDENT, 0)

        def LPAREN(self):
            return self.getToken(PATParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PATParser.RPAREN, 0)

        def ASSIGN(self):
            return self.getToken(PATParser.ASSIGN, 0)

        def processBody(self):
            return self.getTypedRuleContext(PATParser.ProcessBodyContext,0)


        def SEMICOLON(self):
            return self.getToken(PATParser.SEMICOLON, 0)

        def paramList(self):
            return self.getTypedRuleContext(PATParser.ParamListContext,0)


        def getRuleIndex(self):
            return PATParser.RULE_processDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcessDecl" ):
                listener.enterProcessDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcessDecl" ):
                listener.exitProcessDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcessDecl" ):
                return visitor.visitProcessDecl(self)
            else:
                return visitor.visitChildren(self)




    def processDecl(self):

        localctx = PATParser.ProcessDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_processDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(PATParser.IDENT)
            self.state = 99
            self.match(PATParser.LPAREN)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==42:
                self.state = 100
                self.paramList()


            self.state = 103
            self.match(PATParser.RPAREN)
            self.state = 104
            self.match(PATParser.ASSIGN)
            self.state = 105
            self.processBody()
            self.state = 106
            self.match(PATParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(PATParser.IDENT)
            else:
                return self.getToken(PATParser.IDENT, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PATParser.COMMA)
            else:
                return self.getToken(PATParser.COMMA, i)

        def getRuleIndex(self):
            return PATParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = PATParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(PATParser.IDENT)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==31:
                self.state = 109
                self.match(PATParser.COMMA)
                self.state = 110
                self.match(PATParser.IDENT)
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcessBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parallelComposition(self):
            return self.getTypedRuleContext(PATParser.ParallelCompositionContext,0)


        def getRuleIndex(self):
            return PATParser.RULE_processBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcessBody" ):
                listener.enterProcessBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcessBody" ):
                listener.exitProcessBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcessBody" ):
                return visitor.visitProcessBody(self)
            else:
                return visitor.visitChildren(self)




    def processBody(self):

        localctx = PATParser.ProcessBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_processBody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.parallelComposition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParallelCompositionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sequentialComposition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PATParser.SequentialCompositionContext)
            else:
                return self.getTypedRuleContext(PATParser.SequentialCompositionContext,i)


        def PAR_OP(self, i:int=None):
            if i is None:
                return self.getTokens(PATParser.PAR_OP)
            else:
                return self.getToken(PATParser.PAR_OP, i)

        def getRuleIndex(self):
            return PATParser.RULE_parallelComposition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParallelComposition" ):
                listener.enterParallelComposition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParallelComposition" ):
                listener.exitParallelComposition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParallelComposition" ):
                return visitor.visitParallelComposition(self)
            else:
                return visitor.visitChildren(self)




    def parallelComposition(self):

        localctx = PATParser.ParallelCompositionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parallelComposition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.sequentialComposition()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 119
                self.match(PATParser.PAR_OP)
                self.state = 120
                self.sequentialComposition()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SequentialCompositionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primaryProcess(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PATParser.PrimaryProcessContext)
            else:
                return self.getTypedRuleContext(PATParser.PrimaryProcessContext,i)


        def ARROW(self, i:int=None):
            if i is None:
                return self.getTokens(PATParser.ARROW)
            else:
                return self.getToken(PATParser.ARROW, i)

        def getRuleIndex(self):
            return PATParser.RULE_sequentialComposition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSequentialComposition" ):
                listener.enterSequentialComposition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSequentialComposition" ):
                listener.exitSequentialComposition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSequentialComposition" ):
                return visitor.visitSequentialComposition(self)
            else:
                return visitor.visitChildren(self)




    def sequentialComposition(self):

        localctx = PATParser.SequentialCompositionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_sequentialComposition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.primaryProcess()
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 127
                self.match(PATParser.ARROW)
                self.state = 128
                self.primaryProcess()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryProcessContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def action(self):
            return self.getTypedRuleContext(PATParser.ActionContext,0)


        def skipProcess(self):
            return self.getTypedRuleContext(PATParser.SkipProcessContext,0)


        def guardedProcess(self):
            return self.getTypedRuleContext(PATParser.GuardedProcessContext,0)


        def processCall(self):
            return self.getTypedRuleContext(PATParser.ProcessCallContext,0)


        def LPAREN(self):
            return self.getToken(PATParser.LPAREN, 0)

        def processBody(self):
            return self.getTypedRuleContext(PATParser.ProcessBodyContext,0)


        def RPAREN(self):
            return self.getToken(PATParser.RPAREN, 0)

        def choiceProcess(self):
            return self.getTypedRuleContext(PATParser.ChoiceProcessContext,0)


        def blockProcess(self):
            return self.getTypedRuleContext(PATParser.BlockProcessContext,0)


        def getRuleIndex(self):
            return PATParser.RULE_primaryProcess

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimaryProcess" ):
                listener.enterPrimaryProcess(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimaryProcess" ):
                listener.exitPrimaryProcess(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimaryProcess" ):
                return visitor.visitPrimaryProcess(self)
            else:
                return visitor.visitChildren(self)




    def primaryProcess(self):

        localctx = PATParser.PrimaryProcessContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_primaryProcess)
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.action()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.skipProcess()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 136
                self.guardedProcess()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 137
                self.processCall()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 138
                self.match(PATParser.LPAREN)
                self.state = 139
                self.processBody()
                self.state = 140
                self.match(PATParser.RPAREN)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 142
                self.choiceProcess()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 143
                self.blockProcess()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SkipProcessContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(PATParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PATParser.RPAREN, 0)

        def getRuleIndex(self):
            return PATParser.RULE_skipProcess

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSkipProcess" ):
                listener.enterSkipProcess(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSkipProcess" ):
                listener.exitSkipProcess(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSkipProcess" ):
                return visitor.visitSkipProcess(self)
            else:
                return visitor.visitChildren(self)




    def skipProcess(self):

        localctx = PATParser.SkipProcessContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_skipProcess)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.match(PATParser.T__0)
                self.state = 147
                self.match(PATParser.LPAREN)
                self.state = 148
                self.match(PATParser.RPAREN)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                self.match(PATParser.T__0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 150
                self.match(PATParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def communicationAction(self):
            return self.getTypedRuleContext(PATParser.CommunicationActionContext,0)


        def assignmentAction(self):
            return self.getTypedRuleContext(PATParser.AssignmentActionContext,0)


        def internalAction(self):
            return self.getTypedRuleContext(PATParser.InternalActionContext,0)


        def getRuleIndex(self):
            return PATParser.RULE_action

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAction" ):
                listener.enterAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAction" ):
                listener.exitAction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAction" ):
                return visitor.visitAction(self)
            else:
                return visitor.visitChildren(self)




    def action(self):

        localctx = PATParser.ActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_action)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.communicationAction()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.assignmentAction()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 155
                self.internalAction()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommunicationActionContext(ParserRuleContext):
        __slots__ = 'parser'
